nuget prepr fixes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run dotnet format
-        run: dotnet format Kentico.Xperience.RepoTemplate.sln --exclude ./examples/** --verify-no-changes
+        run: dotnet format XperienceCommunity.Bynder.sln --exclude ./examples/** --verify-no-changes
 
   build_and_test:
     name: Build and Test
