--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,24 +1,25 @@
 <Project>
 
   <PropertyGroup>
-    <Company>Actum</Company>
+    <Company>Actum Digital</Company>
     <Authors>$(Company)</Authors>
     <Copyright>Copyright © $(Company) $([System.DateTime]::Now.Year)</Copyright>
     <Trademark>$(Company)™</Trademark>
     <VersionPrefix>1.0.0</VersionPrefix>
-    <VersionSuffix>prerelease-1</VersionSuffix>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
 
-    <PackageProjectUrl>https://github.com/Kentico/REPOSITORY_NAME</PackageProjectUrl>
-    <PackageReleaseNotes>https://github.com/Kentico/REPOSITORY_NAME/releases</PackageReleaseNotes>
+	<Title>Xperience by Kentico - DAM Bynder integration</Title>
+    <PackageProjectUrl>https://github.com/actum/xperience-community-bynder</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/actum/xperience-community-bynder</RepositoryUrl>
+    <PackageReleaseNotes>https://github.com/actum/xperience-community-bynder/releases</PackageReleaseNotes>
     <PackageIcon>logo.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageTags>xperience;kentico;aspnetcore</PackageTags>
+    <PackageTags>xperience;kentico;aspnetcore;bynder</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="$(MSBuildThisFileDirectory)\images\logo.png" Pack="true" Visible="false" PackagePath="" />
-    <None Include="$(MSBuildThisFileDirectory)\README.md" Pack="true" PackagePath=""/>
+    <None Include="$(MSBuildThisFileDirectory)images\logo.png" Pack="true" Visible="false" PackagePath="" />
+    <None Include="$(MSBuildThisFileDirectory)README.md" Pack="true" PackagePath=""/>
   </ItemGroup>
 
   <PropertyGroup>
@@ -30,7 +31,7 @@
     <CopyDocumentationFilesFromPackages>true</CopyDocumentationFilesFromPackages>
     <CopyDebugSymbolFilesFromPackages>true</CopyDebugSymbolFilesFromPackages>
     <NoWarn>$(NoWarn);1591</NoWarn>
-    <RootNamespace>Kentico.Xperience.RepoTemplate</RootNamespace>
+    <RootNamespace>XperienceCommunity.Bynder</RootNamespace>
 
     <EnableDefaultEmbeddedResourceItems>true</EnableDefaultEmbeddedResourceItems>
     <TimestampServerUrl>http://timestamp.digicert.com</TimestampServerUrl>
